--- a/course4/week2/Test Параметрические критерии.ipynb
+++ b/course4/week2/Test Параметрические критерии.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -93,18 +93,17 @@
     {
      "data": {
       "text/plain": [
-       "0.37293045872523534"
+       "0.37290000000000001"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "p=proportions_diff_z_test(proportions_diff_z_stat_ind(data1, data2),'greater')\n",
-    "round(p,4)\n",
-    "p"
+    "round(p,4)"
    ]
   },
   {
@@ -116,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -127,7 +126,7 @@
        "(200, 7)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -153,7 +152,7 @@
        "(50, 6)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -176,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -187,7 +186,7 @@
        "0.80000000000000004"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -213,7 +212,7 @@
        "0.97999999999999998"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -241,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -254,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -283,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -294,7 +293,7 @@
        "0.0032969384555543435"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,12 +307,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# task 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -324,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -332,17 +338,16 @@
     {
      "data": {
       "text/plain": [
-       "0.059945206279614305"
+       "(0.059900000000000002, 0.30009999999999998)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "round(a,4),round(b,4)\n",
-    "a"
+    "round(a,4),round(b,4)"
    ]
   },
   {
@@ -363,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -374,7 +379,7 @@
        "0.050500000000000003"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -405,7 +410,7 @@
        "0.049500000000000002"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -427,10 +432,10 @@
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "0.9505285319663519"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +456,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -465,7 +470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
