--- a/course5/week2/vgg16.ipynb
+++ b/course5/week2/vgg16.ipynb
@@ -94,28 +94,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "!pip install sklearn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "!pip install -U pillow"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -124,10 +102,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# inspired by\n",
@@ -154,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -402,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -416,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -430,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -448,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -467,10 +443,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -541,10 +515,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -565,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -587,40 +559,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([1212, 1890, 2931, 1667, 3312, 3002,  892, 3506, 1152, 1050, 1807,\n",
-       "       2057, 2452, 1510,   18, 1383, 1436, 1168, 1567, 2426], dtype=int64)"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.          0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.          0.          0.          0.\n",
+      "  0.          0.13840872  0.          0.          4.5988102   0.        ]\n"
+     ]
     }
    ],
    "source": [
     "img1 = imread('train/00002.jpg', mode='RGB')\n",
     "img1 = imresize(img1, (224, 224))\n",
-    "prob = sess.run(vgg.fc2, feed_dict={vgg.imgs: [img1]})[0]\n",
-    "preds = (np.argsort(prob)[::-1])[0:20]\n",
-    "preds"
+    "fc2 = sess.run(vgg.fc2, feed_dict={vgg.imgs: [img1]})[0]\n",
+    "print (fc2[:20])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "save_answerArray(\"vgg16_answer2\", preds )"
+    "save_answerArray(\"vgg16_answer2.txt\", fc2[:20] )"
    ]
   },
   {
@@ -642,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -663,9 +630,7 @@
     "        img1 = imread(img_name, mode='RGB')\n",
     "        img1 = imresize(img1, (224, 224))\n",
     "        # Здесь ваш код. Нужно получить слой fc2\n",
-    "        prob = sess.run(vgg.fc2, feed_dict={vgg.imgs: [img1]})[0]\n",
-    "        fc2 = (np.argsort(prob)[::-1])\n",
-    "        \n",
+    "        fc2 = sess.run(vgg.fc2, feed_dict={vgg.imgs: [img1]})[0]\n",
     "        X[i, :] = fc2\n",
     "    \n",
     "    return X, Y"
@@ -673,10 +638,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Функция обработки папки. Ожидается, что в этой папке лежит файл results.txt с метками классов, и \n",
@@ -698,10 +661,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1112,19 +1073,8 @@
       ".\\test\\08085.jpg\n",
       ".\\test\\08096.jpg\n",
       ".\\test\\08127.jpg\n",
-      ".\\test\\08133.jpg\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'X_train' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-56-3868b85981d2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprocess_folder\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'.'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# Вызови меня!\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-55-c66a4cad6de6>\u001b[0m in \u001b[0;36mprocess_folder\u001b[1;34m(folder)\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;31m# Ваш код здесь.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[0mclf\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mSVC\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m     \u001b[0mclf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m     \u001b[0mY_test_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mclf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mY_test\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mY_test_pred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# Число правильно предсказанных классов\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'X_train' is not defined"
+      ".\\test\\08133.jpg\n",
+      "89\n"
      ]
     }
    ],
@@ -1134,10 +1084,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1561,16 +1509,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20\n"
+      "89\n"
      ]
     }
    ],
@@ -1583,13 +1529,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "save_answerNum(\"vgg16_answer3.txt\", 20 )"
+    "save_answerNum(\"vgg16_answer3.txt\", 89 )"
    ]
   },
   {
@@ -1618,7 +1564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
