--- a/course4/week4/Task4.ipynb
+++ b/course4/week4/Task4.ipynb
@@ -1662,7 +1662,7 @@
     "* Интерпретация числа достигаемых уровней значимости, меньших α=0.05, некорректна, поскольку не сделана поправка на множественную проверку гипотез.\n",
     "* Хи-квадрат используется для того, чтобы сравнить выборку с некоторым воздействием (treatment) и выборку без этого воздействия (control). Мы же в первом задании сравнивали штаты, используя данные только control группы. Для данных только из control группы использование xи-квадрат неправомерно.\n",
     "* неверно - Анализ нужно было начинать с применения xи-квадрат к таблице сопряженности, в которой присутствовали сразу все возможные штаты. Достигаемой уровень значимости такой проверки = 0.7, что дает нам гарантию, что нет ни одной пары штатов, в которых отличие в соотношениях ушедших и оставшихся клиентов статистически значимо.\n",
-    "* Применение критерия xи-квадрат для этих данных не обосновано, потому что не выполняются условия, при которых этот критерий дает правильные результаты."
+    "* неверно - Применение критерия xи-квадрат для этих данных не обосновано, потому что не выполняются условия, при которых этот критерий дает правильные результаты."
    ]
   },
   {
@@ -3405,7 +3405,9 @@
     "** Ответ 9 **\n",
     "* неверно - treatment = 2 статистически значимо отличается от контрольной группы treatment = 1\n",
     "* неверно - В дальнейшем телеком компании рекомендуется использовать и treatment = 0, и treatment = 2 для наибольшей эффективности удержения абонентов.\n",
-    "* неверно - Ни один из методов не показал значительного улучшения относительно других, о чем говорит групповой статистический критерий."
+    "* неверно - Ни один из методов не показал значительного улучшения относительно других, о чем говорит групповой статистический\n",
+    "критерий.\n",
+    "* Отличие между treatment = 0 и treatment = 2 относительно влияния на уровень churn статистически незначимо."
    ]
   },
   {
