--- a/course5/week4/Task - Задание по программированию.ipynb
+++ b/course5/week4/Task - Задание по программированию.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -108,7 +108,7 @@
        "9                                76,77,78       NaN"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -278,7 +278,7 @@
        "4        11      0.0     6734.0   53509.5"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,29 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1.0, 0.3333333333333333)"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "metric(traindf.loc[7,'v'],traindf.loc[7,'b'],1,'view_rank')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -355,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -371,7 +349,7 @@
     "    # минимум из К и количеством товаров\n",
     "    first=min(k,len(view_ids))\n",
     "    # возвращаем топ лучших ИД \n",
-    "    return list(rate_df.loc[view,alg].sort_values(kind='heapsort')[0:first].index)"
+    "    return list(rate_df.loc[view,alg].sort_values(kind='mergesort')[0:first].index)"
    ]
   },
   {
@@ -385,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -414,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -435,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -446,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -464,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -481,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -502,12 +480,12 @@
        "    <tr>\n",
        "      <th>r1</th>\n",
        "      <td>0.44</td>\n",
-       "      <td>0.66</td>\n",
+       "      <td>0.67</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>p1</th>\n",
        "      <td>0.51</td>\n",
-       "      <td>0.77</td>\n",
+       "      <td>0.78</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>r5</th>\n",
@@ -525,13 +503,13 @@
       ],
       "text/plain": [
        "   view_rank buy_rank\n",
-       "r1      0.44     0.66\n",
-       "p1      0.51     0.77\n",
+       "r1      0.44     0.67\n",
+       "p1      0.51     0.78\n",
        "r5      0.82     0.93\n",
        "p5      0.21     0.25"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -561,71 +539,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def write_answer(filename,data):\n",
+    "    print (data.T)\n",
+    "    data.T.to_csv(filename,index=False,sep=' ',header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0.44, 0.51, 0.82, 0.21], dtype=object)"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             r1    p1    r5    p5\n",
+      "view_rank  0.44  0.51  0.82  0.21\n"
+     ]
     }
    ],
    "source": [
-    "(t1['view_rank']).as_matrix()\n",
+    "write_answer('res1.txt',t1[['view_rank']])\n",
     "# 0.44 0.51 0.82 0.21"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0.41, 0.48, 0.8, 0.2], dtype=object)"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             r1    p1   r5   p5\n",
+      "view_rank  0.41  0.48  0.8  0.2\n"
+     ]
     }
    ],
    "source": [
-    "(t2['view_rank']).as_matrix()\n",
+    "write_answer('res2.txt',t2[['view_rank']])\n",
     "# 0.41 0.48 0.8 0.2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0.66, 0.77, 0.93, 0.25], dtype=object)"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            r1    p1    r5    p5\n",
+      "buy_rank  0.67  0.78  0.93  0.25\n"
+     ]
     }
    ],
    "source": [
-    "(t1['buy_rank']).as_matrix()\n",
-    "# 0.66 0.77 0.93 0.25"
+    "write_answer('res3.txt',t1[['buy_rank']])\n",
+    "# 0.68 0.79 0.93 0.25"
    ]
   },
   {
