--- a/course4/week4/Task4.ipynb
+++ b/course4/week4/Task4.ipynb
@@ -282,7 +282,8 @@
     "+ Корреляция Спирмена имеет положительный знак, и отличие корреляции от нуля на уровне доверия 0.05 значимо.\n",
     "+ Посчитанные корреляции и их значимости говорят лишь о том, что необходимо взглянуть на данные глазами и попытаться понять, что приводит к таким (противоречивым?) результатам.\n",
     "+ Для вычисления коэффициента Крамера используется значение статистики xи-квадрат, на которую мы не можем положиться применительно к нашим данным.\n",
-    "+ ?"
+    "+   * treatment = 2 статистически значимо отличается от контрольной группы treatment = 1\n",
+    "    * Отличие между treatment = 0 и treatment = 2 относительно влияния на уровень churn статистически незначимо."
    ]
   },
   {
