--- a/final/project_web/week1/week1_prepare_dataset.ipynb
+++ b/final/project_web/week1/week1_prepare_dataset.ipynb
@@ -1171,7 +1171,9 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_data_10users=pd.read_csv('train_data_10users.csv',index_col='session_id')\n",
@@ -1181,7 +1183,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X_toy, y_toy = train_data_toy.iloc[:, :-1].values, train_data_toy.iloc[:, -1].values"
@@ -1225,7 +1229,9 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def convert_to_sparse(ar):\n",
@@ -1240,7 +1246,9 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X_sparse_toy=convert_to_sparse(X_toy)"
@@ -1280,7 +1288,9 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X_10users, y_10users = train_data_10users.iloc[:, :-1].values, \\\n",
@@ -1312,7 +1322,9 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with open(\n",
@@ -1348,7 +1360,9 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "assert X_sparse_10users.shape[1] == len(site_freq_10users)"
