--- a/final/project_web/week3/week3_visual_analysis_and_fe_PR.ipynb
+++ b/final/project_web/week3/week3_visual_analysis_and_fe_PR.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -71,8 +71,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Поменяйте на свой путь к данным\n",
@@ -967,7 +969,9 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "id_name_dict = {128: 'Mary-Kate', 39: 'Ashley', 207: 'Lindsey', 127: 'Naomi', 237: 'Avril',\n",
@@ -2495,14 +2499,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████| 3/3 [00:00<00:00, 103.13it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████| 3/3 [00:00<00:00, 49.94it/s]\n"
      ]
     },
     {
@@ -2660,7 +2664,7 @@
        "4             7935             3          9           4   1       2  "
       ]
      },
-     "execution_count": 267,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2769,14 +2773,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 10/10 [00:58<00:00,  4.70s/it]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 10/10 [01:07<00:00,  5.84s/it]\n"
      ]
     },
     {
@@ -3249,7 +3253,7 @@
        "19               95             7         11           0   1     128  "
       ]
      },
-     "execution_count": 268,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
