--- a/final/project_web/week5/resize.ipynb
+++ b/final/project_web/week5/resize.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -114,69 +114,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "  0%|                                                                                            | 0/2 [00:00<?, ?it/s]\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████████| 2/2 [00:00<00:00,  9.85it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "window_size= 5\n",
-      "1. Читаем исходные данные\n",
-      "2. Формируем словарь\n",
-      "3. Формируем сессии\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  0%|                                                                                            | 0/2 [00:00<?, ?it/s]\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████████| 2/2 [00:00<00:00,  7.86it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "window_size= 7\n",
-      "1. Читаем исходные данные\n",
-      "2. Формируем словарь\n",
-      "3. Формируем сессии\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████| 2/2 [00:00<00:00,  9.45it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "window_size= 10\n",
-      "1. Читаем исходные данные\n",
-      "2. Формируем словарь\n",
-      "3. Формируем сессии\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████| 2/2 [00:00<00:00,  8.09it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wall time: 1.63 s\n"
+      " 77%|█████████████████████████████████████████████████████████████▊                  | 309/400 [05:05<02:21,  1.55s/it]"
      ]
     }
    ],
@@ -184,7 +122,7 @@
     "%%time\n",
     "for window_size in [3,5,7,10]:\n",
     "    print ('window_size=',window_size)\n",
-    "    resize_train('tr/',10,window_size)"
+    "    resize_train('train/',10,window_size)"
    ]
   },
   {
