--- a/final/project_web/week5/[data]resize.ipynb
+++ b/final/project_web/week5/[data]resize.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -15,9 +15,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -81,10 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -92,78 +90,7 @@
      "text": [
       "1. Читаем исходные логи пользователей\n",
       "2. Заменяем название сайта на ИД по словарю\n",
-      "window_size= 3\n",
-      "3. Формируем сессии\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  0%|                                                                                          | 0/400 [00:00<?, ?it/s]\n",
-      "  0%|▏                                                                                 | 1/400 [00:00<02:00,  3.31it/s]\n",
-      "  0%|▍                                                                                 | 2/400 [00:00<01:51,  3.57it/s]\n",
-      "  1%|▌                                                                                 | 3/400 [00:00<01:43,  3.85it/s]\n",
-      "  1%|▊                                                                                 | 4/400 [00:01<01:46,  3.71it/s]\n",
-      "  1%|█                                                                                 | 5/400 [00:01<01:42,  3.85it/s]\n",
-      "  2%|█▏                                                                                | 6/400 [00:01<01:40,  3.93it/s]\n",
-      "  2%|█▍                                                                                | 7/400 [00:01<01:39,  3.95it/s]\n",
-      "  2%|█▋                                                                                | 8/400 [00:02<01:39,  3.93it/s]\n",
-      "  2%|█▊                                                                                | 9/400 [00:02<01:42,  3.83it/s]\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████| 400/400 [06:35<00:00,  1.57s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "window_size= 5\n",
-      "3. Формируем сессии\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 400/400 [05:14<00:00,  1.13s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "window_size= 7\n",
-      "3. Формируем сессии\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 400/400 [03:51<00:00,  1.42it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "window_size= 10\n",
-      "3. Формируем сессии\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 400/400 [03:01<00:00,  1.80it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wall time: 18min 58s\n"
+      "Wall time: 4.86 s\n"
      ]
     }
    ],
@@ -175,7 +102,41 @@
     "    sessions=prepare_train_set(all_user_log, session_length,window_size)\n",
     "    with open('train_'+str(window_size)+'_session.pkl', 'wb') as pkl_file:\n",
     "        pickle.dump(sessions, pkl_file)\n",
-    "all_user_log=read_and_replace(folder)\n",
+    "all_user_log=read_and_replace(folder)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3. Формируем сессии\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████| 400/400 [04:17<00:00,  1.12it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "resize_train(all_user_log,10,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "for window_size in [3,5,7,10]:\n",
     "    print ('window_size=',window_size)\n",
     "    resize_train(all_user_log,10,window_size)"
@@ -191,9 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -217,7 +176,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -247,9 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -271,7 +228,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -298,7 +255,7 @@
    "cell_type": "code",
    "execution_count": 194,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -360,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
